--- a/index.html
+++ b/index.html
@@ -28,188 +28,18 @@
 
     <link href="img/outubyismygod.png" rel="icon" type="image/ico"/>
 
-    <!-- CSS -->
-    <link href="css/particles.css" media="screen" rel="stylesheet">
-    <link href="css/main.css" media="screen" rel="stylesheet">
-    <link href="css/creativa-popup.css" rel="stylesheet">
-    <link href="css/test.css" rel="stylesheet">
-
-    <!-- JS -->
-    <script src="js/title.js"></script>
-    <script src="js/creativa-popup.js" type="text/javascript"></script>
-    <script src="js/popup.js" type="text/javascript"></script>
-
-</head>
-<body oncontextmenu="return false;" onkeydown="return false;" style="overflow: hidden">
-<!--<body style="overflow: hidden">-->
-
-<div id="popupSM">
-<!--    <p id="popup-messageSM"></p>-->
-</div>
-
-<!--<body oncontextmenu="return false;" style="overflow: hidden">-->
-<!--<body style="overflow: hidden">-->
-
-<div class="preloader">
-    <img class="spin" src="img/outubyismygod.png" alt="Preloader" width="300px" height="auto">
-</div>
-
-<div id="background-container"></div>
-
-<!-- particles.js container -->
-<!-- TODO: auf phone anpassen -->
-<div id="particles-js"></div>
-<div class="center">
-<!--    <div class="effect"></div>-->
-    <!--        <div class="blur"></div>-->
-    <div class="content">
-        <div class="otspace">
-            <h1 class="outubybig" onclick="playRandomSound();">Outuby</h1>
-            <p>space</p>
-        </div>
-        <div class="typed">
-            <h2><span class="type"></span></h2>
-        </div>
-
-<!--        TODO: position bei phone ist noch nicht ganz richtig, vllt einfach X20px adden idk     -->
-        <div class="wrap">
-            <div>
-                <a href="https://youtube.com/outuby" target="_blank">
-                    <p class='button'>
-                        <i class="fa-brands fa-youtube"></i>
-                        Youtube
-                    </p>
-                </a>
-            </div>
-            <div>
-                <a href="#" onclick="popup13()">
-                    <p class='button'>
-                        <i class="fa-regular fa-comment"></i>
-                        Contact
-                    </p>
-                </a>
-            </div>
-            <div>
-                <a href="projects">
-                    <p class='button'>
-                        <i class="fa-solid fa-code"></i>
-                        Projects
-                    </p>
-                </a>
-            </div>
-        </div>
-
-
-        <script>
-            var video=document.getElementById("myVideo")
-
-            function vidunmute() {
-                video.play();
-                video.muted = false;
-                video.volume = .2;
-            }
-
-        </script>
-
+    </head>
+<body oncontextmenu="return false;" onkeydown="return false;" style="margin: 0; background-color: #121212; display: flex; align-items: center; justify-content: center; height: 100vh; font-family: Arial, sans-serif; color: #ccc;">
+    <div style="background-color: #1E1E1E; padding: 20px 60px; border-radius: 10px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); text-align: center;">
+        <img src="https://cdn.betterttv.net/emote/627128643c6f14b68846e3cb/3x.webp" alt="Linked Image">
+        <br>
+        <a href="https://c.outuby.space" target="_blank" style="color: #bbb; text-decoration: none; font-size: 16px; margin-top: 10px; display: inline-block;">contact me</a>
     </div>
-</div>
 
-<div class="other-tools">
-<a href="https://outuby.space/skiddetector"><i class="fa-regular fa-paste"></i> Skid List</a> <br>
-<a href="https://outuby.space/webhook"><i class="fa-brands fa-discord"></i> Webhook Tool</a>
-</div>
-
-<footer id="footer">
-          <span class="copyright"
-          >Copyright ©
-            <script>
-                document.write(new Date().getFullYear());
-            </script>
-            outuby.space</span
-          >
-</footer>
-
-<!--<div class="modal" id="modal">-->
-<!--    <div class='modal__container'>-->
-<!--        <div class="modal__content">-->
-<!--            <h1 class="modal__title">click to enter<h1>-->
-<!--        </div>-->
-<!--        <i id="close" class="fas fa-times" style="font-size: 250rem; transform: translateY(-1700px) translateX(1200px); opacity: 0;" onclick="vidunmute();"></i>-->
-<!--    </div>-->
-<!--</div>-->
-
-<span id='player' style="transform: translateY(-1000px)"></span>
-
-<script src="js/typed.js"></script>
-<script src="js/needed.js"></script>
-
-<script>
-    var typed = new Typed('.type', {
-        strings: [
-            "I'm a german web developer",
-            "I'm a designer",
-            "I'm a liar",
-            "I'm retarded",
-            "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website",
-            "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website",
-            "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website",
-            "I dont have friends (except Exeos, Felix, Error, Skush and CodeMan)",
-            "Keiner kann mich stoppen, nicht einmal ein Stoppschild",
-        ],
-        typeSpeed: 69,
-        backSpeed: 32,
-        backDelay: 1500,
-        loop: true,
-        smartBackspace: true,
-    });
-
-    window.addEventListener('keydown', function (e) {
-            if (e.key === 'F5') {
-                location.reload();
-            }
-            else if (e.key === 'F11') {
-                toggleFullscreen();
-            }
-        },
-
-        false);
-
-    function getFullscreenElement() {
-        return document.fullscreenElement   //standard property
-            || document.webkitFullscreenElement //safari/opera support
-            || document.mozFullscreenElement    //firefox support
-            || document.msFullscreenElement;    //ie/edge support
-    }
-
-    function toggleFullscreen() {
-        if(getFullscreenElement()) {
-            document.exitFullscreen();
-        }else {
-            document.documentElement.requestFullscreen().catch(console.log);
+    <style>
+        a:hover {
+            color: #fff;
         }
-    }
-
-    window.addEventListener('load', function() {
-        var preloader = document.querySelector('.preloader');
-        var preloaderImg = document.querySelector('.preloader img');
-
-        // Add the expand-fade-out class to trigger the animation
-        preloader.classList.add('expand-fade-out');
-
-        // Delay removing the preloader until the animation completes
-        setTimeout(function() {
-            preloader.style.display = 'none';
-        }, 700);
-    });
-</script>
-
-
-<!-- scripts -->
-<script crossorigin="anonymous" src="https://kit.fontawesome.com/9105e9014d.js"></script>
-<script src="js/particles.js"></script>
-<script src="js/app.js"></script>
-<script src="js/main.js"></script>
-
-
+    </style>
 </body>
 </html>
